[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/phase2/ship/ship_view.gd" id="1_ship"]
[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/phase2/ship/ship_game_controller.gd" id="2_controller"]
[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/phase2/ship/ship_game_hud.gd" id="3_hud"]
[ext_resource type="Script" path="res://scripts/mars_odyssey_trek/phase2/ship/ship_auto_ui.gd" id="4_ui"]

[node name="ShipAuto" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.06, 0.06, 0.1, 1)

[node name="ShipView" type="Node2D" parent="."]
script = ExtResource("1_ship")

[node name="GameController" type="Node" parent="."]
script = ExtResource("2_controller")
ship_view_path = NodePath("../ShipView")
seconds_per_day = 8.0
event_chance_per_day = 0.5
crisis_time_limit = 12.0

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_hud")
game_controller_path = NodePath("../GameController")
ship_view_path = NodePath("../ShipView")

[node name="SpeedControls" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 550.0
offset_right = 400.0
offset_bottom = 590.0

[node name="SpeedLabel" type="Label" parent="SpeedControls"]
layout_mode = 2
text = "Speed:"

[node name="Speed1" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "1x"

[node name="Speed2" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "2x"

[node name="Speed5" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "5x"

[node name="Pause" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "Pause"

[node name="Restart" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "Restart"

[node name="Back" type="Button" parent="SpeedControls"]
layout_mode = 2
text = "‚Üê Menu"

[node name="UIController" type="Node" parent="."]
script = ExtResource("4_ui")
